--- a/css/style.css
+++ b/css/style.css
@@ -1116,7 +1116,7 @@ FAQ Page
 
     height: 275px;
 
-    background-color: #2024AF;
+    background-color: #0f9359; /* anterior background-color: #2024AF;*/
 
     color: #fff;
 
